# rules_rust

.bazelci/: presubmit.yml
crate_universe/: docs_bzlmod.bzl
docs/: crate_universe_bzlmod.md
examples/bzlmod/all_deps_vendor/: MODULE.bazel  sys_deps.bzl
examples/bzlmod/cross_compile/: BUILD.bazel  MODULE.bazel  README.md
examples/bzlmod/musl_cross_compiling/: .gitignore  MODULE.bazel  README.md
examples/bzlmod/musl_cross_compiling/musl_scratch/: BUILD.bazel  test_platform.sh
examples/bzlmod/musl_cross_compiling/musl_scratch/src/: main.rs
examples/bzlmod/oci_container/: README.md
examples/bzlmod/oci_container/tokio_oci/: BUILD.bazel
examples/bzlmod/proto/: .gitignore  MODULE.bazel
examples/bzlmod/proto/grpc_client/: BUILD.bazel
examples/bzlmod/proto/proto_bindings/proto/: helloworld.proto
rust/: repositories.bzl
rust/platform/: triple_mappings.bzl
rust/platform/constraints/: BUILD.bazel
